<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/mnuFree"
        android:title="@string/Free_Apps" />
    <item
        android:id="@+id/mnuPaid"
        android:title="@string/Paid_Apps" />
    <item
        android:id="@+id/mnuSongs"
        android:title="@string/Songs" />
    <group
        android:id="@+id/mnugrplimit"
        android:checkableBehavior="single">
        <item
            android:id="@+id/mnu10"
            android:checked="true"
            android:title="@string/top_10" />
        <item
            android:id="@+id/mnu25"
            android:checked="false"
            android:title="@string/top_25" />
    </group>
    <item
        android:id="@+id/mnuRefresh"
        android:title="@string/refresh" />
</menu>